style.css
:root{
    --width: 100%
}

#homepage{
    background: url('https://upload.wikimedia.org/wikipedia/commons/a/a1/Back_Bay_skyline_from_Arnold_Arboretum_(2)%2C_November_1975.jpg');
    background-attachment: fixed;
    background-size: cover;
    background-position: center;
    overflow-x:hidden; /* https://stackoverflow.com/a/23367521/9608521 */
    /*  background-size: cover;
    background-repeat: no-repeat;
    backface-visibility: hidden; */
}

#home{
    /* margin: 0 60px; */
}

nav > ul{
    left: -50px;
    position: relative;
}

nav{
    width: calc(100% + 100px); /* moving this from ul to nav made the desktop look better */
}

.bar{
    display: flex;
    justify-content: space-between;
}

.bar li{ /* for lis in nav */
    display: block;
    flex-direction: row;
    margin: 0 15px;
    /* max-width: 200px; */ /* idk if i wanna keep this */ /* .bar's displat:flex made me not need this */
}


.button > *{
    /* color: #fff;
    font-size: 40px;
    line-height: 0;
    margin: auto; */
}

.button{
    /* display: none; */
}

.collapsible{
    background-color:#c1e2e8;
    border: 5px solid #7f7f7f;
    border-radius: 15px;
    display:none;
    position: relative;
    /* right: -20px; */
    margin: 0 auto;
    width: 100%;
    text-align: center;
}

.collapsible li{
    margin: 15px;
    display: block;
    border-bottom: solid 1px black;
}

.collapsible li:last-child{
    border-bottom: none;
}

.sub-menu-1{
    display:none;
}

.frost{
    background-color: #ffffff7f;
    padding: 50px;
    min-height: 100vh;
}

.gray{
    background-color: #7f7f7f7f;
}

.desktop{
    display: none;
}

.button{
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 40px;
    height: 40px;
    cursor: pointer;
    transition: all .5s ease-in-out;
    /* border: 3px solid #fff;
    color: #fff; */
    /* https://github.com/codeSTACKr/hamburger-animation */
    /* https://www.youtube.com/watch?v=dIyVTjJAkLw */
}

.icons{
    display: flex;
    justify-content: space-around;
    font-size: 35px;
}

@media(min-width:700px){

    h1{
        text-align: center;
        font-size: 3em;
    }

    
    .bar{
        /* padding: 0; */
        display:grid;
        grid-template-columns: 2fr 2fr;
        /* justify-content: space-around; */
    }
    

    #home{
        grid-column: 1/2;
    }

    #others{
        grid-column: 2/3;
    }

    #others > ul{
        display: flex;
        justify-content: space-around;
    }
    
    .bar li{ /* for lis in nav */
        display: block;
        flex-direction: row;
    }
    
    .bar > *{
        margin: 0 60px;
    }

    .button{
        display: none;
    }

    .burger{
        width: 50px;
      height: 6px;
      background: #fff;
      border-radius: 5px;
      box-shadow: 0 2px 5px rgba(255,101,47,.2);
      transition: all .5s ease-in-out;
    }
    
    .sections{
        display:flex;
    }

    .projects{
        display: flex;
        flex-wrap: wrap;
        justify-content: space-around;
    }

    .projects > article{
        width: calc(25% + 30px);
        /* flex: 1fr 1fr calc(33% - 2rem); */
    }

    .form{ /* the section with class form */
        /* margin: 0 auto; 
        width: 400px; */
        margin: 0 auto;
    }



    /* hide mobile bar */
    .collapsible, .collapsible *{
        display: none;
    }

    .desktop{
        display: flex;
        /* justify-content: space-between; */
    }

    .mobile{
        display: none;
    }

    .icons{
        font-size: 50px;
    }


}

h1{
    text-align: center;
    font-size: 2em;
}
h2{
    text-align: center;
}

form > :not([type='submit']){
    /* margin: 5px;
    display:block; 
    width: 100% */
}

.projects > article{
    border-radius: 1em;
    margin: 2.5%;
}

.projects{
    text-align: center;
}

.projects p{
    padding: 5px 10px;
    text-align: left;
}

.projects h3{
    /* text-align: center; */
    border-bottom: 1px solid black;
}

.projects img{
    width: 90%;
    margin-bottom: 20px;
}

iframe{
    margin: 0 auto;
    /* background-color: transparent;
    border: 0px none transparent;
    padding: 0px;
    overflow: hidden; */
}

.form{ /* the section with class form */
    /* margin: 0 auto; 
    width: 400px; */
    text-align: center;
}



[type='submit']{
    margin: 0 0 0 50%;
}

/* .fa-linkedin, .fa-github{
    font-size: 50px;
} */

.introduction{
    max-width: 600px;
    margin: 0 auto;
    text-align:justify;
}

a{
    color: #00007f;
}

